<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StopwatchActivity"
    android:background="@color/bg">

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:textSize="52dp"
        android:layout_marginTop="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_relative"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/bg1"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_relative"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/bg1"
        android:text="@string/continue1"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_relative"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/bg1"
        android:text="@string/stop"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/reset_btn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_relative"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/bg1"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/bottom_relative"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <Button
            android:layout_width="148dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/bg1"
            android:text="@string/stopwatch"
            android:textSize="16dp"
            android:textColor="@color/red"/>
        <Button
            android:layout_width="152dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/bg1"
            android:text="@string/alarm"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:onClick="OnAlarm"/>
    </RelativeLayout>

</RelativeLayout>